// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Launchdarkly's trackEvent destination action: all fields 1`] = `
Array [
  Object {
    "creationDate": 1612137600000,
    "data": Object {
      "testType": "52YDr",
    },
    "key": "52YDr",
    "kind": "custom",
    "metricValue": -84620425497149.44,
    "user": Object {
      "key": "52YDr",
    },
  },
]
`;

exports[`Testing snapshot for Launchdarkly's trackEvent destination action: required fields 1`] = `
Array [
  Object {
    "creationDate": Any<Number>,
    "data": Object {},
    "key": "52YDr",
    "kind": "custom",
    "user": Object {
      "key": "52YDr",
    },
  },
]
`;
